TESTS YA FUNCIONAN.